--- a/src/main.css
+++ b/src/main.css
@@ -13,15 +13,11 @@ body{
 
 /** ヘッダーが34px、フッターが20px */
 #input_area{
-	padding:34px 0px 20px 10px;
+	padding:34px 0px 20px 0px;
 	height:100%;
 }
 
 #input_txt{
-	outline:0;
-	border:0px;
-	background-color:#1e1e1e;
-	color:#eeeeee;
 	width:100%;
 	height:100%;
 }
@@ -43,34 +39,34 @@ body{
 }
 
 /** スクロールバーデザイン */
-#input_txt::-webkit-scrollbar
+.ace_scrollbart::-webkit-scrollbar
 {
 	width:10px;
 	background:#333;
 }
-#input_txt::-webkit-scrollbar:horizontal
+.ace_scrollbar::-webkit-scrollbar:horizontal
 {
 	height:5px;
 }
-#input_txt::-webkit-scrollbar-button
+.ace_scrollbar::-webkit-scrollbar-button
 {
 	width:10px;
 	height:5px;
 	background:#999;
 }
-#input_txt::-webkit-scrollbar-piece
+.ace_scrollbar::-webkit-scrollbar-piece
 {
 	background:#666;
 }
-#input_txt::-webkit-scrollbar-piece:start
+.ace_scrollbar::-webkit-scrollbar-piece:start
 {
 	background:#666;
 }
-#input_txt::-webkit-scrollbar-thumb
+.ace_scrollbar::-webkit-scrollbar-thumb
 {
 	background:#999;
 }
-#input_txt::-webkit-scrollbar-corner
+.ace_scrollbar::-webkit-scrollbar-corner
 {
 	background:#999;
 }
