--- a/src/main.css
+++ b/src/main.css
@@ -2,37 +2,50 @@
   margin: 0px;
   padding: 0px;
 }
-
-html,
+html {
+  height: 100%;
+}
 body {
   width: 100%;
   height: 100%;
   background-color: #1e1e1e;
   overflow: hidden;
+
+  display: grid;
+  grid-template:
+    "header" auto
+    "editor" 1fr
+    "footer" auto /
+    100%;
 }
 
-/** ヘッダーが34px、フッターが20px */
-#input_area {
-  padding: 34px 0px 20px 0px;
-  height: 100%;
+#inputArea {
+  grid-area: editor;
 }
 
-#input_txt {
-  width: 100%;
-  height: 100%;
+.header {
+  grid-area: header;
+  padding: 4px 8px;
 }
 
-#header_fixed {
-  position: fixed;
-  height: 34px;
-  width: 100%;
-}
-
-#footer_fixed {
-  position: fixed;
-  height: 20px;
-  width: 100%;
-  bottom: 0px;
+.footer {
+  grid-area: footer;
+  min-height: 24px;
   background-color: #337ab7;
   color: #eeeeee;
+  font-size: 0.75rem;
+  display: flex;
+  align-items: center;
+  padding-left: 8px;
+}
+
+.btn-primary {
+  -webkit-appearance: button;
+  color: #fff;
+  background-color: #007bff;
+  border-color: #007bff;
+  padding: 0.25rem 0.5rem;
+  font-size: 0.875rem;
+  line-height: 1.5;
+  border-radius: 0.2rem;
 }
